# inv_unidad02

./: .gitignore  AGENTS.md  Datos_Completados.csv  IPC_Analisis.xlsx  README.md  Tema1_DesnutricionVial_Huanuco.xlsx  Tema2_ClimaAgro_Huanuco.xlsx  ipc_data.xlsx  pyproject.toml  reporte_final.txt
data/processed/: BaseDatos_Vial_Huanuco.xlsx  Base_datos.xlsx  base_datos_econometria.csv  bonos_verdes.csv
docs/: ing_per_capita.md
notebooks/RendimientosCredicorp/: Informe.md  base_datos_econometria.csv  econometry_analisis.ipynb  econometry_refactored.ipynb  precios_mensuales.csv
notebooks/datospanel/: analisis.ipynb
notebooks/investigaciones/: creditos_reales.ipynb
notebooks/model/: arima_model.ipynb
src/: Obtener_bbdd.py  build_clima_agro.py  conectividad_vial.py  config.py  credicorp.py  credito_real.py  data_loader.py  data_processing.py  econometria_basica.py  get_ipc.py  informalidad.py  main.py  reporte.py
